--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "predev": "pnpm run lint",
     "dev": "next dev",
-    "build": "next build",
+    "build": "eslint --fix . && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix . && next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/js-cookie": "^3.0.6",
     "canvas-confetti": "^1.9.3",
