--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "predev": "pnpm run lint",
     "dev": "next dev",
-    "build": "eslint --fix . && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix . && next lint"
+    "lint": "eslint --fix . && next lint",
+    "check-translations": "ts-node --project tsconfig.node.json scripts/check-translations.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
@@ -32,13 +33,17 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "glob": "^11.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
